[build-system]
requires = ["setuptools>=58.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miniDAS"
version = "0.1.0"
description = "Minimalistic HDF5 container for DAS event data."
keywords = ["DAS", "distributed acoustic sensing", "seismology", "data format"]
authors = [
    { name = "Marius Paul Isken", email = "mi@gfz-potsdam.de" },
    { name = "Andreas Wüstefeld", email = "Andreas.Wuestefeld@norsar.no" }
]
requires-python = ">=3.6"
dependencies = [
    "h5py>=3.7.0",
    "numpy>=1.23.4",
    "matplotlib>=3.6.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "isort>=5.10.0",
    "black>=22.10.0"
]

[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = "black"
